hello-python/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-python
  labels:
    app: hello-python
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: hello-python
