hello-python/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-python
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /hello-python(.*)
          #path: /hello-python/(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: hello-python
              port:
                number: 5000
